[package]
name = "two-lock-queue"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["futures", "future", "tasks"]
repository = "https://github.com/carllerche/two-lock-queue"
homepage = "https://github.com/carllerche/two-lock-queue"
documentation = "https://docs.rs/two-lock-queue"
description = """
A MPMC channel based on the michael-scott two lock queue algorithm.
"""

[dependencies]
